# fixture-fetcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  Makefile  calendars.json  index.html  main.js  main.js.map  manchester-united-fc.pl.ics  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  style.css
.github/workflows/: build_calendars.yaml  build_calendars.yml  test.yaml
calendars/manchester-united-fc/premier-league/: manchester-united-fc.premier-league.ics
calendars/premier-league/arsenal/: arsenal.pl.ics
calendars/premier-league/aston-villa/: aston-villa.pl.ics
calendars/premier-league/bournemouth/: bournemouth.pl.ics
calendars/premier-league/brentford/: brentford.pl.ics
calendars/premier-league/brighton-hove/: brighton-hove.pl.ics
calendars/premier-league/burnley/: burnley.pl.ics
calendars/premier-league/chelsea/: chelsea.pl.ics
calendars/premier-league/crystal-palace/: crystal-palace.pl.ics
calendars/premier-league/everton/: everton.pl.ics
calendars/premier-league/fulham/: fulham.pl.ics
calendars/premier-league/leeds-united/: leeds-united.pl.ics
calendars/premier-league/liverpool/: liverpool.pl.ics
calendars/premier-league/man-city/: man-city.pl.ics
calendars/premier-league/man-united/: man-united.pl.ics
calendars/premier-league/newcastle/: newcastle.pl.ics
calendars/premier-league/nottingham/: nottingham.pl.ics
calendars/premier-league/sunderland/: sunderland.pl.ics
calendars/premier-league/tottenham/: tottenham.pl.ics
calendars/premier-league/west-ham/: west-ham.pl.ics
calendars/premier-league/wolverhampton/: wolverhampton.pl.ics
data/: teams.yaml
data/overrides/: tv_overrides.yaml
public/: manchester-united-fc.pl.ics  tsconfig.tsbuildinfo
scripts/: build.py  build_calendars.py  build_site.js  cache.py  clean.py  compare_calendars.py  compare_static_files.py  make_overrides_template.py
src/: __init__.py  cli.py  config.py  models.py  shell.py
src/app/: cli.py  shell.py
src/backend/: __init__.py  config.py
src/backend/api/: __init__.py  football_data.py
src/backend/storage/: snapshot.py
src/logic/: __init__.py  enrich.py  filters.py
src/logic/calendar/: __init__.py  builder.py  compare.py  formatter.py  ics_writer.py
src/logic/fixtures/: __init__.py  enrich.py  filters.py  models.py  repository.py
src/output/: __init__.py  ics_writer.py
src/providers/: __init__.py  club_ics.py  football_data.py
src/utils/: __init__.py  errors.py  handler.py  logging.py  manifest.py  snapshot.py
static/: main.ts  tsconfig.json
tests/: __init__.py  conftest.py  test_cli_integration.py  test_club_ics.py  test_compare.py  test_config.py  test_enrich.py  test_errors.py  test_filters.py  test_football_data.py  test_handler.py  test_ics_writer.py  test_manifest.py  test_models.py  test_snapshot.py
