[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "fixture-fetcher"
version = "0.4.0"
description = "A Python CLI tool that fetches football fixture data and generates iCalendar files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "rdawebb"}]
dependencies = [
    "beaupy>=3.11.0,<4.0.0",
    "icalendar>=7.0.3,<8.0.0",
    "pygments>=2.20.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "pyyaml>=6.0.3,<7.0",
    "requests>=2.33.0,<3.0.0",
    "rich>=15.0.0,<16.0.0",
    "urllib3>=2.6.3,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "prek>=0.3.9,<1.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "ruff>=0.15.11,<15.0.0",
    "rust-just>=1.49.0,<2.0.0",
    "ty>=0.0.31,<0.1.0"
]

[tool.ruff]
lint.ignore = [
    "B008",   # Do not perform function calls in argument defaults (common Typer pattern)
]
